# searcher-sdk

./: .gitignore  .pre-commit-config.yaml  README.md  setup.cfg  tox.ini
example/: README.md  simple_searcher.py
example/contract/: SearcherBase.sol  SimpleSearcher.sol
searcher_sdk/: __init__.py  cli.py  client.py  jsonrpc.py  models.py  pydantic_annotations.py  tracing.py  utils.py
tests/: helpers.py
tests/integration/: test_simple.py
tests/unit/: test_client.py  test_utils.py
