[metadata]
name = searcher-sdk
description = Wallchain's auction searcher SDK
keywords = blockchain python
classifiers =
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.8",

[options]
zip_safe = False
python_requires = >=3.8
include_package_data = True
packages = find:
platforms = any
install_requires =
    pydantic>=2.0.0
    eth-abi>=4.0.0
    eth-account>=0.8.0
    websockets>=11.0.0
    click==8.1.6

[options.extras_require]
tracing =
    opentelemetry-distro==0.40b0
    opentelemetry-exporter-otlp==1.19.0
dev =
    mypy==1.4.1
    pre-commit==3.3.3
    pytest==7.4.0
    pytest-asyncio==0.21.1
    pytest-cov==4.1.0
    pytest-randomly==3.13.0
    polyfactory==2.7.0
    tox==4.6.4
    click==8.1.6
    fastapi==0.100.0
    uvicorn==0.23.1


[flake8]
max-line-length = 88
ignore = N801,N802,N803,E252,W503,E133,E203,F541

[isort]
profile = black
combine_as_imports = True

[tool:pytest]
testpaths = tests
asyncio_mode = auto
filterwarnings=
    error
    ignore::DeprecationWarning:eth_abi
    ignore::DeprecationWarning:eth_account
    ignore::DeprecationWarning:eth_keyfile

[coverage:run]
branch = True
source = platform_disk_api

[mypy]
plugins = pydantic.mypy
check_untyped_defs = True
disallow_any_generics = True
disallow_untyped_defs = True
follow_imports = normal
strict_optional = True
warn_redundant_casts = True
warn_unused_ignores = True

[mypy-setuptools.*]
ignore_missing_imports = true
